--- a/Harsh.html
+++ b/Harsh.html
@@ -32,7 +32,7 @@
         <ul>
             <li><a href= "Jatin.html">Jatin </a></li>
             <li><a href= "Joe.html">Joe </a></li>
-            <li><a href= "homepage.html">Homepage</a></li>
+            <li><a href= "Homepage.html">Homepage</a></li>
         </ul>
         <div class="flex-container">
             <img src = "Harsh.png">
