--- a/Joe.html
+++ b/Joe.html
@@ -31,7 +31,7 @@
     <ul>
         <li><a href= "Harsh.html">Harsh </a></li>
         <li><a href= "Jatin.html">Jatin </a></li>
-        <li><a href= "homepage.html">Homepage</a></li>
+        <li><a href= "Homepage.html">Homepage</a></li>
     </ul>
     <div class="flex-container">
         <img src = "Joe.png">
