--- a/Jatin.html
+++ b/Jatin.html
@@ -34,7 +34,7 @@
     <ul>
         <li><a href= "Harsh.html">Harsh </a></li>
         <li><a href= "Joe.html">Joe </a></li>
-        <li><a href= "homepage.html">Homepage</a></li>
+        <li><a href= "Homepage.html">Homepage</a></li>
     </ul>
     <div class=flex-container>
     <img src = https://media1.popsugar-assets.com/files/thumbor/kV1k0O41QturScdqqs57WIR7MBg/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2017/09/15/948/n/3019466/cbb060d259bc4a224f3ed3.35832650_edit_img_image_37326804_1456416000/i/Hot-Bearded-Guys.jpg>
