--- a/snake.html
+++ b/snake.html
@@ -152,4 +152,17 @@ document.addEventListener('keydown', function(e) {
   // right arrow key
   else if (e.which === 39 && snake.dx === 0) {
     snake.dx = grid;
-    
+    snake.dy = 0;
+  }
+  // down arrow key
+  else if (e.which === 40 && snake.dy === 0) {
+    snake.dy = grid;
+    snake.dx = 0;
+  }
+});
+
+// start the game
+requestAnimationFrame(loop);
+</script>
+</body>
+</html>
